# Embargo

./: .gitignore  Cargo.toml  README.md
documents/: README.md
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  build.rs  mod.rs  new.rs  project_type.rs
src/commands/: build.rs  clean.rs  mod.rs  new.rs  project_type.rs  run.rs
src/embargo_toml/: cfg_trait.rs  const_values.rs  dependencies.rs  global_config.rs  global_file.rs  mod.rs  package.rs  pkg_config.rs  set_env.rs  toolchain.rs
src/executions/: clean_project.rs  create_project.rs  mod.rs  run_project.rs
src/runtime/: clean_project.rs  create_project.rs  mod.rs  run_project.rs
template_files/: .gitignore  EmbargoGlobal.toml  README.md  main.cpp
tests/: integration_tests.rs
tests/common/: mod.rs
