[package]
name = "embargo"
authors = ["Daniel Becher"]
description = "A C++ build tool for the modern world."
version = "0.0.1"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
walkdir = "2.5.0"
