[package]
name = "embargo-cpp"
authors = ["Daniel Becher <danbecherdev@gmail.com>"]
description = "A C++ build tool for the modern world."
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dbecher1/Embargo"
repository = "https://github.com/dbecher1/Embargo"
documentation = "https://github.com/dbecher1/Embargo"
keywords = ["embargo", "build", "c++", "make", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "embargo"
path = "src/main.rs"

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive", "color"] }
colored = "2.2.0"
env_logger = "0.11.5"
log = "0.4.22"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
topological-sort = "0.2.2"
walkdir = "2.5.0"

[dev-dependencies]
assert_fs = "1.1.3"
predicates = "3.1.3"
serial_test = "3.2.0"
